--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -8,6 +8,8 @@ $accent: #2b130b;
 $deep-blue: #0a1657;
 $deep-purple: #1f0b32;
 
+$plum: #62045f;
+
 $dark: #141312;
 $dark-page: #141312;
 
